tests/fail/snapshot_outlive_transaction_db.rs
use rocksdb::TransactionDB;

fn main() {
    let _snapshot = {
        let db = TransactionDB::open_default("foo").unwrap();
        db.snapshot()
    };
}